--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/pg": "^7.14.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.0.3"
   }
 }
