--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "tsc && node ./build/src/index.js",
+    "start": "tsc && node ./build/index.js",
     "coverage": "jest --coverage"
   },
   "repository": {
